syntax="proto3";

package api;


// The request message containing the required parameters.
message CreateRequest {
  string name = 1;
}

// The response message containing the required parameters.
message CreateReply {
  string ObjId = 1;
}

// The request message containing the required parameters.
message DeleteRequest {
  string ObjId = 1;
}

// The response message containing the required parameters.
message DeleteReply {
  bool flag = 1;
}

// The request message containing the required parameters.
message GenericMethodRequest {
  string ObjId = 1;
  string sapphireObjName = 2;
  string funcName = 3;
  bytes params  = 4;
  //repeated string paramNames=5;
  repeated string dmsList=6;
}

// The response message containing the required parameters.
message GenericMethodReply {
    bytes ret = 1;
}

service MgmtgrpcService {
    rpc CreateSapphireObject( CreateRequest ) returns (CreateReply ){}
    rpc DeleteSapphireObject( DeleteRequest ) returns (DeleteReply) {}
    rpc GenericMethodInvoke( GenericMethodRequest )   returns (GenericMethodReply){}
}
